--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ body {
 }
 
 .start__rectangle {
-  background: url(img/Rectangle.png);
+  background: no-repeat url(img/Rectangle.png);
 }
 
 .start__btn {
